# cleanmac-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  demo.cast
.github/workflows/: release.yml
docs/plans/: 2026-02-18-cleanx-design.md  2026-02-18-roadmap.md  2026-02-19-ai-readable-cli-mcp-design.md  spec-plugin.md  spec-scanner.md  spec-tui.md  spec-uninstaller.md
formula/: cleanmac.rb
src/: cli.rs  config.rs  history.rs  main.rs  safety.rs  utils.rs
src/cleaner/: mod.rs
src/mcp/: server.rs
src/metadata/: mod.rs  spotlight.rs
src/output/: json_schema.rs  mod.rs
src/plugin/: mod.rs  registry.rs  traits.rs
src/scanner/: browser.rs  caches.rs  dev.rs  duplicates.rs  large_files.rs  logs.rs  mail.rs  maintenance.rs  mod.rs  music.rs  photo.rs  privacy.rs  startup.rs  trash.rs
src/tui/: app.rs  mod.rs
src/tui/controller/: app_list.rs  category_select.rs  common.rs  mod.rs  review.rs  space_lens.rs  uninstall.rs
src/tui/logic/: mod.rs  navigation.rs  selection.rs  sorting.rs
src/tui/service/: disk.rs  mod.rs  scanner.rs
src/tui/state/: app_state.rs  apps.rs  mod.rs  modes.rs  scan.rs  space_lens.rs
src/tui/view/: mod.rs
src/tui/view/components/: footer.rs  mod.rs  modal.rs  utils.rs
src/tui/view/screens/: app_list.rs  category_select.rs  loading.rs  mod.rs  review.rs  space_lens.rs  uninstall.rs
src/uninstaller/: mod.rs
