[package]
name = "cleanmac"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for cleaning macOS system like CleanMyMac"
license = "MIT"
authors = ["wis"]

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
walkdir = "2"
glob = "0.3"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
byte-unit = "5"
plist = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
rmcp = { version = "0.16", features = ["server", "macros", "transport-io"] }

[profile.release]
lto = true
strip = true
